--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,19 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <service
+            android:name=".TipoffClockService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
+
         <activity
-            android:name=".SettingsActivity"
-            android:label="@string/app_name" >
+            android:name=".SettingActivity"
+            android:label="@string/title_general_settings" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
